public/stylesheets/style.css
/* ... */
.comments-list {
    margin-right: 0;
    margin-left: 0;
}

.similar-scenarios {
    margin-top: 30px;
}

.similar-scenarios h3 {
    font-size: 22px;
}

.commets {
    margin-top: 20px;
    font-size: 13px;
}

.commets .comment-date {
    color: gray;
    margin-bottom: 10px;
}

.comment-closer {
    padding-left: 0;
}

.comment-post {
    margin-top: 15px;
    word-wrap: break-word;
}

.commets p.text-right {
    margin: 0;
}

.post-comment .name,
.post-comment .email {
    width: 200px;
}

.main-login {
    max-width: 320px;
    margin: 0 auto;
    font-size: 12px
}
.main-login .login-or {
    position: relative;
    font-size: 18px;
    color: #aaa;
    margin-top: 10px;
    margin-bottom: 10px;
    padding-top: 10px;
    padding-bottom: 10px;
}
.main-login .span-or {
    display: block;
    position: absolute;
    left: 50%;
    top: -2px;
    margin-left: -25px;
    background-color: #fff;
    width: 50px;
    text-align: center;
}
.main-login .hr-or {
    background-color: #cdcdcd;
    height: 1px;
    margin-top: 0px !important;
    margin-bottom: 0px !important;
}
.main-login h3 {
    text-align: center;
    line-height: 300%;
}

.print-button,
.save-button {
    margin-top: 0;
}


/*

SIDE menu


*/

.side-menu ul {
    width: 100%;
}

.side-menu ul li {
    float: none;
    display: block;
    font-size: 12px;
}

.side-menu ul li span {
    margin-right: 5px;
}

.side-menu ul li .badge {
    float: right;
}

.dashboard-main-content {
    /* height: 100%;
    overflow-y: scroll; /* has to be scroll, not auto */
    -webkit-overflow-scrolling: touch;
    font-size: 13px;
    padding-top: 5px;
}

.dashboard-main-content .badge {
    //float: right;
    margin-left: 5px;
}

/*::-webkit-scrollbar {
display: none;
}*/

.input-group.search {
    padding-bottom: 20px;
    border-bottom: 1px solid gray;
}

.dashboard-main-content .single_scenario_item {
    padding-bottom: 0px;
}

.dashboard-main-content .single_scenario_item .extra-info {
    display: inline-block;
}

.dashboard-main-content .single_scenario_item .rating {
    float: right;
    display: inline-block;
    margin-left: 38px;
}

.dashboard-main-content .single_scenario_item .open-button {
    margin-top: -10px;
}

.dashboard-main-content a h3.panel-title {
    color: #fff;
    text-decoration: none;
}

.dashboard-main-content a.black-link h3.panel-title {
    color: #000;
    text-decoration: none;
}

.dashboard-user-thumb {
    width: 40px;
    padding: 10px 0;
}

.loading-gif-animation {
    text-align: center;
    margin: 0 auto;

}

.notifications
{
    list-style: none;
    margin: 0;
    padding: 0;
    font-size: 12px;
}

.notifications img {
    width: 35px;
}

.notifications li
{
    margin-bottom: 10px;
    padding-bottom: 5px;
    border-bottom: 1px dotted #B3A9A9;
}

.notifications li.left .notification-body
{
    margin-left: 50px;
}


.notifications li .notification-body p
{
    margin: 0;
    color: #777777;
}

.notifications {
    height: 300px;
    overflow-x: scroll;
    -webkit-overflow-scrolling: touch;
}

p.content-for-notification {
    float: left;
    padding-top: 6px;
}

.notifications li.new {
    font-weight: bold;
    color: #000;
}

/* user list dashboard */
.user-list-follow-unfollow-btn {
    margin-top: 19px;
}

.user-list-image {
    padding-right: 15px;
}

.user-list-organization {
    color:gray;
}

/* enable absolute positioning */
.inner-addon {
    position: relative;
}

/* style glyph */
.inner-addon .glyphicon {
    position: absolute;
    padding: 10px;
}

/* align glyph */
.left-addon .glyphicon  { left:  0px;}
.right-addon .glyphicon { right: 0px;}

/* add padding  */
.left-addon input  { padding-left:  30px; }
.right-addon input { padding-right: 30px; }

.header-search {
    margin-top: 8px;
}

.header-login {
    margin-left: 30px;
    margin-top: 14px;
}
#bottom {
    position: absolute;
    bottom: 10%;
}


.search-dash {
    margin-right: 20px;
    width: 30%;
}

.dash-scenario-label {
    margin-right: 15px;
}

label {
    display: inline-block;
}

.learining-outcomes-list-container {
    margin-bottom: 30px;
}

.activity-item {
    background-color: #fff;
    width: 100%;
}

.activity-item .multiselect-parent,
.activity-item .multiselect-parent button {
    width: 100%;
    text-align: left;
}

.activity-item .multiselect-parent button .caret {
    position: absolute;
    right: 10px;
    margin-top: 10px;
}

.activity-item .dropdown-menu>li>a span {
    padding-left: 18px;
}

.activity-item .dropdown-menu>li>a span.glyphicon {
    padding-left: 0px;
}

.activity-list-container {
    margin-top: 30px;
    margin-bottom: 30px;
}

.drag-selector {
    cursor: move;
    position: absolute;
    right: 10px;
}

.drag-selector span {
    font-size: 1.2em;
    color: gray;
    padding-top: 8px;
}

/* position add-material-modal to center */
.modal {
    text-align: center;
}

@media screen and (min-width: 768px) {
    .modal:before {
        display: inline-block;
        vertical-align: middle;
        content: " ";
        height: 100%;
    }
}

.modal-dialog {
    display: inline-block;
    text-align: left;
    vertical-align: middle;
}

.show {
    display: block;
}

.hide {
    display: none;
}

a.delete-link {
    color: red;
}

.clear:before,
.clear:after {
    content: " ";
    display: table;
}

.clear:after {
    clear: both;
}

#scenario-wrapper {
    border: 1px solid lightgray;
    overflow: scroll;
    -webkit-overflow-scrolling: touch;
}

.legend,
.legend-text,
.timeline-line,
.activity-container,
.activity-org-icon,
.activity-org-title,
.material-container,
.material-wrapper,
.conveyor-container,
.display-container,
.material-edit,
.new-add,
.new-material-button {
    position: absolute;
}

.activity-container,
.material-wrapper,
.conveyor-container,
.display-container,
.material-edit,
.new-material-button {
    -webkit-transition: all 0.2s ease-in-out;
    transition: all 0.2s ease-in-out;
}

.legend-text {
    font-size: 11px;
    line-height: 1;
}
/* ... */

